chore: installs redux and related libs.

--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-test-renderer": "^16.0.0",
-    "webpack": "^3.6.0"
+    "webpack": "^3.6.0",
+    "react-chrome-redux": "^1.4.0",
+    "redux": "^3.7.2",
+    "react-redux": "^5.0.6"
   }
 }
