--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "jest": "^21.2.1",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-test-renderer": "^16.0.0",
-    "webpack": "^3.6.0",
     "react-chrome-redux": "^1.4.0",
+    "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
+    "react-test-renderer": "^16.0.0",
     "redux": "^3.7.2",
-    "react-redux": "^5.0.6"
+    "webpack": "^3.6.0"
   }
 }
