--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "react-test-renderer": "^16.0.0",
     "redux": "^3.7.2",
     "webpack": "^3.6.0"
+  },
+  "dependencies": {
+    "axios": "^0.17.1"
   }
 }
