feat: executes the update function for every domain in the redux state every second.

--- a/bin/build
+++ b/bin/build
@@ -2,7 +2,7 @@ echo 'set -e ---------------------------------------------'
 set -e
 
 echo 'npm install ----------------------------------------'
-npm install
+#npm install
 
 echo 'yarn run build  ------------------------------------'
 yarn run build
