--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,8 @@
 {
   "presets": [
-    "react", "es2015"
+    "react",
+    "es2015",
+    "stage-2"
   ],
   "plugins": ["transform-object-rest-spread"],
   "env": {
