WIP: setup redux thunk to intercept the action sent via the alias middleware, so we can get the state before trying to solve the action.

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
-    "react-toggle-button": "^2.2.0"
+    "react-toggle-button": "^2.2.0",
+    "redux-thunk": "^2.2.0"
   }
 }
