--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "react-toggle-button": "^2.2.0",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
   }
 }
