feat: use <TimeAgo/> to get a more readable representation of the timestamps.

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "axios": "^0.17.1",
     "react-toggle-button": "^2.2.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "timeago-react": "^2.0.0"
   }
 }
