--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,7 @@
     "es2015",
     "stage-2"
   ],
-  "plugins": ["transform-object-rest-spread"],
+  "plugins": ["transform-object-rest-spread", "emotion"],
   "env": {
     "test": {
       "plugins": [
