--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^22.0.3",
     "react": "^16.0.0",
     "react-chrome-redux": "^1.4.0",
@@ -36,6 +38,7 @@
     "react-redux": "^5.0.6",
     "react-test-renderer": "^16.0.0",
     "redux": "^3.7.2",
+    "timekeeper": "^2.0.0",
     "webpack": "^3.6.0"
   },
   "dependencies": {
