--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-redux": "^5.0.6",
     "react-test-renderer": "^16.0.0",
     "redux": "^3.7.2",
+    "sinon": "^4.1.3",
     "timekeeper": "^2.0.0",
     "webpack": "^3.6.0"
   },
