--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^22.0.4",
+    "jest-cli": "^22.0.4",
     "react": "^16.0.0",
     "react-chrome-redux": "^1.4.0",
     "react-dom": "^16.0.0",
